# timeseries_research

./: .gitignore  README.md  Untitled Notebook 2025-02-04 13_22_17.ipynb  databricks.yml  pyproject.toml  requirements-db.txt  requirements-dev.txt  setup.py
automl/: automl_aiforecast.ipynb
chronos_uco_forecast/: chronos_forecast.py  prepare_data.py
hierarchical/: hierarchical_feat_engg.ipynb
intro/: whirlwind_time_series.py
m5/: m5_lstm_optuna.ipynb  m5_nixtla.ipynb  utils.py
resources/: canonical_mlflow.job.yml  chronos_forecast.job.yml  timeseries_research.job.yml
src/: automl_aiforecast.ipynb  canonical_mlflow.py  hierarchical_feat_engg.ipynb  intro_to_time_series.ipynb  m5_lstm_optuna.ipynb  run_benchmark.ipynb
src/dbtsr/: main.py  utils.py
tests/: main_test.py
